@@ -244,12 +244,12 @@ process and user.
 .. function:: getlogin()
 
    Return the name of the user logged in on the controlling terminal of the
-   process.  For most purposes, it is more useful to use the environment variable
-   :envvar:`LOGNAME` to find out who the user is, or
+   process.  For most purposes, it is more useful to use the environment variables
+   :envvar:`LOGNAME` or :envvar:`USERNAME` to find out who the user is, or
    ``pwd.getpwuid(os.getuid())[0]`` to get the login name of the currently
    effective user id.
 
-   Availability: Unix.
+   Availability: Unix, Windows.
 
 
 .. function:: getpgid(pid)
