@@ -10,6 +10,8 @@ What's New in Python 3.2 Alpha 3?
 Core and Builtins
 -----------------
 
+- Issue #9808: Implement os.getlogin for Windows. Patch by Jon Anglin.
+
 - Issue #9901: Destroying the GIL in Py_Finalize() can fail if some other
   threads are still running.  Instead, reinitialize the GIL on a second call to
   Py_Initialize().
